--- a/1_Basic Reinforcement Learning Algorithm.ipynb
+++ b/1_Basic Reinforcement Learning Algorithm.ipynb
@@ -13,9 +13,9 @@
    "id": "ca2dbc54",
    "metadata": {},
    "source": [
-    "**Project:** To Study the Methodologies of Reinforcement Learning and to Develop an Understanding of Problem Representation in Code.<br>\n",
+    "**Capstone Project:** To Study the Methodologies of Reinforcement Learning and to Develop an Understanding of Problem Representation in Code<br>\n",
     "**Author:** Pranav Panchal<br>\n",
-    "**Notebook:** 1<br>\n",
+    "**Notebook:** 1 of 3<br>\n",
     "**Next Notebook:** Exploration of OpenAI Gym<br>"
    ]
   },
@@ -24,7 +24,7 @@
    "id": "8904b039",
    "metadata": {},
    "source": [
-    "## Table of contents\n",
+    "### Table of contents\n",
     "1. [What is Machine Learning?](#What-is-Machine-Learning?)\n",
     "2. [What is Reinforcement Learning?](#What-is-Reinforcement-Learning?)\n",
     "3. [Basic RL Implementation](#Basic-RL-Implementation)\n",
@@ -354,6 +354,14 @@
     "This problem is tackled and successfully completed by many; however, the idea is not only to implement the reinforcement learning model, but also to learn how to define and code the environment which represents the problem to be solved.\n",
     "\n",
     "In reinforcement learning, the environment definition plays an important role. The representation of state and the different regards and penalty weights affect the behaviour of the learning agent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ad5d475",
+   "metadata": {},
+   "source": [
+    "In the next notebook, we will be looking at implementing this understanding of reinforcement learning using a the Q-learning on a pre-defined environment from the gym library."
    ]
   }
  ],
