--- a/2_Exploration of OpenAI Gym.ipynb
+++ b/2_Exploration of OpenAI Gym.ipynb
@@ -39,6 +39,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f35b5c8b",
+   "metadata": {},
+   "source": [
+    "Note: The training results may vary within reason as the runs are random. Setting the seed for the environment does not work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "35060853",
    "metadata": {},
    "source": [
