--- a/3_Q-Learning Implementation on Snake Game.ipynb
+++ b/3_Q-Learning Implementation on Snake Game.ipynb
@@ -42,6 +42,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22b8a1f5",
+   "metadata": {},
+   "source": [
+    "Note: The training results may vary within reason as the runs are random. This custom environment has not been coded with the seed functionality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "44f03588",
    "metadata": {},
    "source": [
